Создание и реализация входа на сайт

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <a href="/about">О компании</a>
         <a href="/contacts">Контакты</a>
         <a href="/sitemap">Карта сайта</a>
+        <a href="/login">Войти</a>
         </nav>
         <!-- КНОПКА для переключения -->
         <button id="vision-toggle" class="btn" style="margin-left: 12px;">👁️‍🗨️Версия для слабовидящих</button>
