--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
   <form method="post" class="contact-form">
     <input name="username" placeholder="Логин" required>
     <input name="password" type="password" placeholder="Пароль" required>
-    <button class="_toggle-btn">Войти</button>
+    <button class="btn">Войти</button>
   </form>
 </section>
 {% endblock %}
