--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Главная{% endblock %}
 
 {% block content %}
-<section class="main">
+<section class="hero">
     <div class="container main-inner">
         <div class="main-text">
             <h1>Сеть магазинов товаров для дома</h1>
