Работа со стилями для страницы login

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link id="theme-style" rel="stylesheet" href="/static/css/style.css">
 </head>
 
-<body>
+<body class="page">
 <header>
     <div class="container header-inner">
         <div class="logo">HomeStore</div>
@@ -34,7 +34,7 @@
         </div>
 </header>
 
-<main>
+<main class="page-content">
     {% block content %}{% endblock %}
 </main>
 
