--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,10 @@
 {% block title %}Вход{% endblock %}
 
 {% block content %}
-<section class="container">
-  <h1>Вход в систему</h1>
+<section class="login-page">
 
-  <form method="post" class="contact-form">
+  <form method="post" class="login-form">
+    <h1>Вход в систему</h1>
     <input name="username" placeholder="Логин" required>
     <input name="password" type="password" placeholder="Пароль" required>
     <button class="btn">Войти</button>
