--- a/templates/cart.html
+++ b/templates/cart.html
@@ -35,7 +35,7 @@
         <div class="cart-actions">
             <a href="/cart/clear" class="btn secondary">Очистить корзину</a>
             <a href="/catalog" class="btn">Продолжить покупки</a>
-            <a href="#" class="btn">Оформить заказ</a>
+            <a href="/order/create" class="btn">Оформить заказ</a>
         </div>
     {% else %}
         <p>Корзина пуста</p>
