--- a/templates/sitemap.html
+++ b/templates/sitemap.html
@@ -5,7 +5,7 @@
 <section class="container">
     <h1>Карта сайта</h1>
     <h2>Основные страницы</h2>
-    <ul class="new-list">
+    <ul class="news-list">
         <li><a href="/">Главная</a></li>
         <li><a href="/catalog">Каталог</a></li>
         <li><a href="/delivery">Доставка и оплата</a></li>
@@ -14,7 +14,7 @@
         <li><a href="/contacts">Контакты</a></li>
     </ul>
     <h2>Каталог</h2>
-        <ul class="new-list">
+        <ul class="news-list">
         <li><a href="/catalog">Все категории товаров</a></li>
         <li><a href="/search">Поиск по каталогу</a></li>
     </ul>
